fix layout bug for chrome.

--- a/src/app/post-detail/post-detail.component.scss
+++ b/src/app/post-detail/post-detail.component.scss
@@ -28,7 +28,7 @@ $prime-color: #0D566E;
 
     #article-container {
         flex: 75%;
-        overflow: scroll;
+        overflow-x: scroll;
     }
 
     nav.article-nav {
